--- a/styles.css
+++ b/styles.css
@@ -16,34 +16,58 @@ html, body {
 .navbar {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    align-items: center;
     background-color: rgb(192, 246, 228);
     padding: 0;
     margin: 0;
     list-style: none;
 }
 
+/* All nav items */
 .navbar li {
-    flex: 1 1 auto;
     border-right: 1px solid #828282;
-    text-align: center;
 }
 
-.navbar li:last-child {
-    border-right: none;
-    border-left: 1px solid #828282;
-}
-
+/* Nav links */
 .navbar li a {
     display: block;
     padding: 14px 16px;
     text-decoration: none;
     color: black;
+    text-align: center;
+    white-space: nowrap;
 }
 
+/* Last nav item pinned to right */
+#last {
+    margin-left: auto;
+    border-left: 1px solid #828282;
+    border-right: none;
+}
+
+/* Hover effect */
 .navbar li a:hover {
     background-color: #00ddff;
 }
+
+/* Responsive behavior */
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .navbar li, #last {
+        border: none;
+        width: 100%;
+    }
+
+    #last {
+        margin-left: 0;
+        border-top: 1px solid #828282;
+    }
+}
+
 
 .active {
     background-color: #00ffc8;
