--- a/styles.css
+++ b/styles.css
@@ -166,12 +166,33 @@ hr {
 }
 
 #pdf_embed {
-    width: 100%;
-    max-width: 800px;
+    width: 95%;
+    max-width: 1400px;
     height: 600px;
     margin: 10px auto;
     display: block;
 }
+
+@media (min-width: 1600px) {
+    #pdf_embed {
+        max-width: 1600px;
+        height: 700px;
+    }
+}
+
+@media (max-width: 768px) {
+    #pdf_embed {
+        width: 100%;
+        height: 400px;
+    }
+}
+
+@media (max-width: 480px) {
+    #pdf_embed {
+        height: 300px;
+    }
+}
+
 
 a h4 {
     color: black;
